<resources>
    <string name="app_name">NavigationApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_group">No Group</string>
    <string name="no_conservations">No Conservations</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="condition">I agree to the Tearm and Conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="next_step">Next Step</string>
    <string name="profile_information">Profile Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_text_continue">Continue</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="upload_a_photo">Upload a Photo</string>
    <string name="from_your_mobile">From your mobile</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="with_your_camera">With your camera</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
</resources>