<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".navigation.fragment.ProfilePictureFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/next_step"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_picture"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"/>
    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_user"/>
    <TextView
        android:id="@+id/tvUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/upload_a_photo"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/from_your_mobile"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tvTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/take_a_photo"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/with_your_camera"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <Button
            android:id="@+id/btnSkip"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/skip"/>
        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/finish"/>
    </LinearLayout>
</LinearLayout>